--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ build/
 .DS_Store
 deprecated/
 test/
+traj_dist/bin/
+traj_dist/conda-meta/
+traj_dist/include/
+traj_dist/lib/
+traj_dist/pydist/sspd_v1.py
+traj_dist/pydist/sspd_v1.pyc
+traj_dist/share/
+traj_dist/ssl/
+
