ALl python dist work with new point_to_seg and point_to_trajectory version

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ traj_dist/pydist/sspd_v1.py
 traj_dist/pydist/sspd_v1.pyc
 traj_dist/share/
 traj_dist/ssl/
-
+traj_dist/build_benchmark_data.py	
+var/
